--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>8248 FRC Scouting App</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/icon_128x128.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>8248 Scouting</title>
+    <meta name="theme-color" content="#16181C">
   </head>
   <body>
     <div id="root"></div>
