Iphone is stupid so i fixed it on there

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon_128x128.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="theme-color" content="#16181C">
   </head>
   <body class="mdc-typography overflow-hidden">
